fix: list items' wonky spacing, +adjust-list-items mixin (scss)

--- a/scss/topic.scss
+++ b/scss/topic.scss
@@ -25,6 +25,8 @@
 			}
 			list-style-type: none;
 
+			@include adjust-list-items();
+
 			&.timeline {
 				@include timeline-style;
 			}
